--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,14 @@ certifi==2021.5.30
 charset-normalizer==2.0.3
 html5lib==1.1
 idna==3.2
-numpy==1.21.1
-pandas==1.3.0
+numpy==2.0.1
+pandas==2.2.2
 Pillow==8.3.1
 python-dateutil==2.8.2
 pytz==2021.1
 requests==2.26.0
 six==1.16.0
 soupsieve==2.2.1
+tzdata==2024.1
 urllib3==1.26.6
 webencodings==0.5.1
